<resources>
    <string name="app_name">project-booking-films-uwe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="account_created">Account created successfully</string>
    <string name="user_exists">User already exists</string>
    <string name="movies">Movies</string>
    <string name="see_all">See all</string>
    <string name="top_movies">Top Movies</string>
    <string name="hello_user">Hello User</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="film_name">Film Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="seats">Seats</string>
    <string name="cinema_id">Cinema ID</string>
    <string name="price">Price</string>
    <string name="barcode">Barcode</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="title">title</string>
    <string name="textview">TextView</string>
    <string name="name">name</string>
    <string name="close">Close</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="information">INFORMATION</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="movie_tickets_booked">MOVIE TICKETS BOOKED</string>
    <string name="hyphen">-</string>
    <string name="selected_seats">Selected Seats</string>
    <string name="selected">Selected</string>
    <string name="unavailable">Unavailable</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="_0_seat_selected">0 Seat Selected</string>
    <string name="_0">$0</string>
    <string name="available">Available</string>
    <string name="year">year</string>
    <string name="imdb">IMDB</string>
    <string name="summary">Summary</string>
    <string name="test">test</string>
    <string name="cast">Cast</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="trailer">Trailer</string>
    <string name="film_title">Film Title</string>
    <string name="show_date">Show Date</string>
    <string name="show_time">Show Time</string>
    <string name="cinema_hall">Cinema Hall</string>
    <string name="total_price">Total Price</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cinema_ticket_booking">Cinema Ticket Booking</string>
    <string name="discover_and_book_the_latest_n_movies_at_your_favorite_cinemas_n_easy_and_fast">Discover and book the latest \n movies at your favorite cinemas\n Easy and fast!</string>
    <string name="get_started">Get Started</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
</resources>
