<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/btn_1"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/colorError"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/btn_3"
        android:title="@string/cart"
        app:cnb_backgroundColor="@color/colorError"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/btn_4"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/colorError"
        app:cnb_iconColor="@color/white" />
</menu>