<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/themeMainColor"
    android:layout_height="match_parent"
    tools:context=".activities.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cinema_ticket_booking"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/textTitle"
                android:textStyle="bold|italic"
                android:layout_marginTop="60dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="444dp"
                app:srcCompat="@drawable/intro_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/textSecondary"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:text="@string/discover_and_book_the_latest_n_movies_at_your_favorite_cinemas_n_easy_and_fast" />

            <androidx.appcompat.widget.AppCompatButton
                style="@android:style/Widget.Button"
                android:id="@+id/startBtn"
                android:background="@color/button"
                android:textColor="@color/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/get_started"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>