<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/themeDetailColor"
    tools:context=".activities.FilmDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/filmPic"
                android:layout_width="0dp"
                android:layout_height="550dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_dark"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/blurView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/blur_bg"
                app:blurOverlayColor="#90000000"
                app:layout_constraintBottom_toBottomOf="@+id/filmPic"
                app:layout_constraintTop_toBottomOf="@+id/filmPic"
                tools:layout_editor_absoluteX="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/titleTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:text="@string/title"
                            android:textColor="@color/textTitle"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/trailerLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/trailer"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/genreView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/gradient_bg" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/movieTimeTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/year"
                            android:textColor="@color/textSecondary"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/imdbTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/imdb"
                            android:textColor="@color/textRating"
                            tools:ignore="TextContrastCheck" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/summary"
                        android:textColor="@color/textSecondary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movieSummeryTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test"
                        android:textColor="@color/textAccent" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/cast"
                        android:textColor="@color/textSecondary"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/castListView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp" />
                </LinearLayout>

            </eightbitlab.com.blurview.BlurView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buyTicketBtn"
                style="@android:style/Widget.Button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/button"
                android:text="@string/buy_ticket"
                android:textColor="@color/buttonText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/blurView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blurView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>