<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CartActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_tickets_booked"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@+id/chipNavigationBar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelete"
        android:layout_width="117dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/delete"
        android:visibility="gone"
        android:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@+id/chipNavigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEdit"
        android:layout_width="117dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/button"

        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/chipNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bottom_nav"
        android:padding="4dp"
        app:cnb_iconColor="@color/white"
        app:cnb_iconSize="20dp"
        app:cnb_menuResource="@menu/bottom_menu"
        app:cnb_orientationMode="horizontal"
        app:cnb_radius="10dp"
        app:cnb_unselectedColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
